--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="bouton"><a href="#" class="btn btn-primary boutontoggle">Marges</a><img src="img/settings.svg"/></div>
+    <div class="bouton"><a href="#" class="btn btn-primary boutontoggle">Marges</a><img src="images/settings.svg"/></div>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <img src="img/logo.png" width="110px" alt="Logo du site">
+                <img src="images/logo.png" width="110px" alt="Logo du site">
             </a>
             <ul class="nav nav-pills py-3">
                 <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Accueil</a></li>
@@ -27,7 +27,7 @@
     </div>
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light header">
             <div class="col-md-5 p-lg-5 mx-auto my-5 tophead">
-                <h1 class="display-4 fw-normal">C&S Renov</h1>
+                <img src="images/logo.png" alt="" height="200px">
                 <p class="lead fw-normal">De l'ébauche des plans de votre maison, jusqu'à l'aboutissement de votre chantier, C&S Renov est à vos côtés.</p>
                 <a class="btn btn-outline-secondary" href="#infos">En savoir plus</a>
             </div>
@@ -35,15 +35,15 @@
         <div class="container col-xxl-8 px-4 py-5" id="infos">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="img/house1.jpg" class="d-block mx-lg-auto img-fluid" alt="Première image de maison" width="700" height="500" loading="lazy">
+                    <img src="images/house1.jpg" class="d-block mx-lg-auto img-fluid" alt="Première image de maison" width="700" height="500" loading="lazy">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Une expérience de plus de cinquante ans</h1>
                     <p class="lead">Fort d'une grande expérience, l'entreprise C&S Renov saura vous accompagner tout au long de la réalisation de votre projet.
                         Toutes nos précédentes réalisations sont disponibles dans notre galerie.
                     </p>
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <a href="projets.html"><button type="button" class="btn btn-outline-secondary btn-lg px-4 me-md-2 prj">Voir nos projets</button></a>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start btncta">
+                        <a href="projets.html"><button type="button" class="btn btn-lg px-4 me-md-2 prj">Voir nos projets</button></a>
                         <a href="contact.html"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Nous contacter</button></a>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                   <p class="lead">Travaux de maçonnerie, rénovation et travaux sur la toiture, isolation, travaux de menuseries</p>
                 </div>
                 <div class="col-md-5">
-                    <img src="img/house2.jpg" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
+                    <img src="images/house2.jpg" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
                 </div>
               </div>
               <hr class="presentation-divider">
@@ -67,14 +67,14 @@
                   <p class="lead">Construction de votre maison neuve sur un terrain nu, avec une ossature en bois d'acajou éco-responsable ou en brique alvéolées.</p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img src="img/house3.jpg" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
+                    <img src="images/house3.jpg" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
                 </div>
               </div>
         </div>
         <footer class="pt-4 my-md-5 pt-md-5 border-top mx-auto tmdc">
             <div class="row">
               <div class="col col-md-6 col-lg-3">
-                <img class="mb-2" src="img/logo.png" alt="" width="180">
+                <img class="mb-2" src="images/logo.png" alt="" width="180">
               </div>
               <div class="col-12 col-md-6 col-lg-3">
                 <h5 id='mt-mb'>Notre agence</h5>
