--- a/prices.html
+++ b/prices.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="bouton"><a href="#" class="btn btn-primary boutontoggle">Marges</a><img src="img/settings.svg"/></div>
+    <div class="bouton"><a href="#" class="btn btn-primary boutontoggle">Marges</a><img src="images/settings.svg"/></div>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <img src="img/logo.png" width="110px" alt="Logo du site">
+                <img src="images/logo.png" width="110px" alt="Logo du site">
             </a>
             <ul class="nav nav-pills py-3">
                 <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
@@ -86,7 +86,7 @@
     <footer class="pt-4 my-md-5 pt-md-5 border-top mx-auto tmdc">
         <div class="row">
           <div class="col col-md-6 col-lg-3">
-            <img class="mb-2" src="img/logo.png" alt="" width="180">
+            <img class="mb-2" src="images/logo.png" alt="" width="180">
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <h5 id='mt-mb'>Notre agence</h5>
