--- a/projets.html
+++ b/projets.html
@@ -6,13 +6,14 @@
     <title>C&S Renov - Nos projets</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="css/lightbox.min.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="bouton"><a href="#" class="btn btn-primary boutontoggle">Marges</a><img src="img/settings.svg"/></div>
+    <div class="bouton"><a href="#" class="btn btn-primary boutontoggle">Marges</a><img src="images/settings.svg"/></div>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <img src="img/logo.png" width="110px" alt="Logo du site">
+                <img src="images/logo.png" width="110px" alt="Logo du site">
             </a>
             <ul class="nav nav-pills py-3">
                 <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
@@ -32,27 +33,27 @@
         <hr class="presentation-divider mb-5">
         <div class="row">
             <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                <img src="img/galerie3.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/>
-                <img src="img/galerie1.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/>
-                <img src="img/galerie7.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/>
+                <a href="images/galerie3.jpg" data-lightbox="chantier"><img src="images/galerie3.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
+                <a href="images/galerie1.jpg" data-lightbox="chantier"><img src="images/galerie1.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
+                <a href="images/galerie7.jpg" data-lightbox="chantier"><img src="images/galerie7.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
             </div>
         
             <div class="col-lg-4 mb-4 mb-lg-0">
-                <img src="img/galerie2.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/>
-                <img src="img/galerie4.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/>
+                <a href="images/galerie2.jpg" data-lightbox="chantier"><img src="images/galerie2.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+                <a href="images/galerie4.jpg" data-lightbox="chantier"><img src="images/galerie4.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
             </div>
         
             <div class="col-lg-4 mb-4 mb-lg-0">
-            <img src="img/galerie8.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/>
-            <img src="img/galerie6.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/>
-            <img src="img/galerie9.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/>
+            <a href="images/galerie8.jpg" data-lightbox="chantier"><img src="images/galerie8.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+            <a href="images/galerie6.jpg" data-lightbox="chantier"><img src="images/galerie6.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+            <a href="images/galerie9.jpg" data-lightbox="chantier"><img src="images/galerie9.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
             </div>
         </div>
     </div>
     <footer class="pt-4 my-md-5 pt-md-5 border-top mx-auto tmdc">
         <div class="row">
           <div class="col col-md-6 col-lg-3">
-            <img class="mb-2" src="img/logo.png" alt="" width="180">
+            <img class="mb-2" src="images/logo.png" alt="" width="180">
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <h5 id='mt-mb'>Notre agence</h5>
@@ -85,6 +86,7 @@
       </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="js/lightbox.min.js"></script>
     <script>
         var state = false;
         $(document).ready(function(){
