SEO >> Meta Tags + Canonical

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C&S Renov - Accueil</title>
+    <title>C&S Renov - Entreprise familiale de maçonnerie sur Draguignan</title>
+    <meta name="title" content="C&S Renov - Entreprise familiale de maçonnerie sur Draguignan">
+    <meta name="description" content="C&S Renov, entreprise familiale depuis 1954 vous propose ses services : rénovation, ravalement de façade, construction, menuiserie, isolation, et bien d'autres.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cs-renov.fr/">
+    <meta property="og:title" content="C&S Renov - Entreprise familiale de maçonnerie sur Draguignan">
+    <meta property="og:description" content="C&S Renov, entreprise familiale depuis 1954 vous propose ses services : rénovation, ravalement de façade, construction, menuiserie, isolation, et bien d'autres.">
+    <meta property="og:image" content="images/seo.jpg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://cs-renov.fr/">
+    <meta property="twitter:title" content="C&S Renov - Entreprise familiale de maçonnerie sur Draguignan">
+    <meta property="twitter:description" content="C&S Renov, entreprise familiale depuis 1954 vous propose ses services : rénovation, ravalement de façade, construction, menuiserie, isolation, et bien d'autres.">
+    <meta property="twitter:image" content="images/seo.jpg">
+    <link rel="canonical" href="https://cs-renov.fr/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -34,7 +47,7 @@
     </div>
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light header">
             <div class="col-md-5 p-lg-5 mx-auto my-5 tophead">
-                <img src="images/logo.png" alt="" height="200px">
+                <img src="images/logo.png" alt="Logo du site pour la bannière" height="200px">
                 <p class="lead fw-normal">De l'ébauche des plans de votre maison, jusqu'à l'aboutissement de votre chantier, C&S Renov est à vos côtés.</p>
                 <a class="btn btn-outline-secondary" href="#infos">En savoir plus</a>
             </div>
@@ -74,14 +87,14 @@
                   <p class="lead">Construction de votre maison neuve sur un terrain nu, avec une ossature en bois d'acajou éco-responsable ou en brique alvéolées.</p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img src="images/house3.webp" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
+                    <img src="images/house3.webp" class="d-block mx-lg-auto img-fluid" alt="Troisième image de maison" width="500" height="500" loading="lazy">
                 </div>
               </div>
         </div>
         <footer class="pt-4 my-md-5 pt-md-5 border-top mx-auto tmdc">
             <div class="row">
               <div class="col col-md-6 col-lg-3">
-                <img class="mb-2" src="images/logo.png" alt="" width="180">
+                <img class="mb-2" src="images/logo.png" alt="Logo du site pour le footer" width="180">
               </div>
               <div class="col-12 col-md-6 col-lg-3">
                 <h5 id='mt-mb'>Notre agence</h5>
