--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C&S Renov - Nos projets</title>
+    <title>C&S Renov - Entreprise familiale de maçonnerie sur Draguignan</title>
+    <meta name="title" content="C&S Renov - Entreprise familiale de maçonnerie sur Draguignan">
+    <meta name="description" content="C&S Renov, entreprise familiale depuis 1954 vous propose ses services : rénovation, ravalement de façade, construction, menuiserie, isolation, et bien d'autres.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cs-renov.fr/">
+    <meta property="og:title" content="C&S Renov - Entreprise familiale de maçonnerie sur Draguignan">
+    <meta property="og:description" content="C&S Renov, entreprise familiale depuis 1954 vous propose ses services : rénovation, ravalement de façade, construction, menuiserie, isolation, et bien d'autres.">
+    <meta property="og:image" content="images/seo.jpg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://cs-renov.fr/">
+    <meta property="twitter:title" content="C&S Renov - Entreprise familiale de maçonnerie sur Draguignan">
+    <meta property="twitter:description" content="C&S Renov, entreprise familiale depuis 1954 vous propose ses services : rénovation, ravalement de façade, construction, menuiserie, isolation, et bien d'autres.">
+    <meta property="twitter:image" content="images/seo.jpg">
+    <link rel="canonical" href="https://cs-renov.fr/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
     <link href="css/lightbox.min.css" rel="stylesheet"/>
@@ -40,27 +53,27 @@
         <hr class="presentation-divider mb-5">
         <div class="row">
             <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                <a href="images/galerie3.webp" data-lightbox="chantier"><img src="images/galerie3.webp" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
-                <a href="images/galerie1.webp" data-lightbox="chantier"><img src="images/galerie1.webp" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
-                <a href="images/galerie7.webp" data-lightbox="chantier"><img src="images/galerie7.webp" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
+                <a href="images/galerie3.webp" data-lightbox="chantier"><img src="images/galerie3.webp" class="w-100 shadow-1-strong rounded mb-4" alt="Tractopelle sur un chantier"/></a>
+                <a href="images/galerie1.webp" data-lightbox="chantier"><img src="images/galerie1.webp" class="w-100 shadow-1-strong rounded mb-4" alt="Charpente en bois maison"/></a>
+                <a href="images/galerie7.webp" data-lightbox="chantier"><img src="images/galerie7.webp" class="w-100 shadow-1-strong rounded mb-4" alt="Pelleteuse sur un tas de terre"/></a>
             </div>
         
             <div class="col-lg-4 mb-4 mb-lg-0">
-                <a href="images/galerie2.webp" data-lightbox="chantier"><img src="images/galerie2.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
-                <a href="images/galerie4.webp" data-lightbox="chantier"><img src="images/galerie4.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+                <a href="images/galerie2.webp" data-lightbox="chantier"><img src="images/galerie2.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt="Échaffaudages avec chariot élévateur"/></a>
+                <a href="images/galerie4.webp" data-lightbox="chantier"><img src="images/galerie4.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt="Pose d'une toiture avec échauffaudages"/></a>
             </div>
         
             <div class="col-lg-4 mb-4 mb-lg-0">
-            <a href="images/galerie8.webp" data-lightbox="chantier"><img src="images/galerie8.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
-            <a href="images/galerie6.webp" data-lightbox="chantier"><img src="images/galerie6.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
-            <a href="images/galerie9.webp" data-lightbox="chantier"><img src="images/galerie9.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+            <a href="images/galerie8.webp" data-lightbox="chantier"><img src="images/galerie8.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt="Charpente de toit d'une maison en construction"/></a>
+            <a href="images/galerie6.webp" data-lightbox="chantier"><img src="images/galerie6.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt="Découpe et mesure de planches de bois par un ouvrier"/></a>
+            <a href="images/galerie9.webp" data-lightbox="chantier"><img src="images/galerie9.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt="Pelleteuse équipée d'un forêt entourée d'une équipe d'ouvrirer"/></a>
             </div>
         </div>
     </div>
     <footer class="pt-4 my-md-5 pt-md-5 border-top mx-auto tmdc">
         <div class="row">
           <div class="col col-md-6 col-lg-3">
-            <img class="mb-2" src="images/logo.png" alt="" width="180">
+            <img class="mb-2" src="images/logo.png" alt="Logo du site pour le footer" width="180">
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <h5 id='mt-mb'>Notre agence</h5>
