--- a/prices.html
+++ b/prices.html
@@ -3,7 +3,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C&S Renov - Nos tarifs</title>
+    <title>C&S Renov - Entreprise familiale de maçonnerie sur Draguignan</title>
+    <meta name="title" content="C&S Renov - Entreprise familiale de maçonnerie sur Draguignan">
+    <meta name="description" content="C&S Renov, entreprise familiale depuis 1954 vous propose ses services : rénovation, ravalement de façade, construction, menuiserie, isolation, et bien d'autres.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cs-renov.fr/">
+    <meta property="og:title" content="C&S Renov - Entreprise familiale de maçonnerie sur Draguignan">
+    <meta property="og:description" content="C&S Renov, entreprise familiale depuis 1954 vous propose ses services : rénovation, ravalement de façade, construction, menuiserie, isolation, et bien d'autres.">
+    <meta property="og:image" content="images/seo.jpg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://cs-renov.fr/">
+    <meta property="twitter:title" content="C&S Renov - Entreprise familiale de maçonnerie sur Draguignan">
+    <meta property="twitter:description" content="C&S Renov, entreprise familiale depuis 1954 vous propose ses services : rénovation, ravalement de façade, construction, menuiserie, isolation, et bien d'autres.">
+    <meta property="twitter:image" content="images/seo.jpg">
+    <link rel="canonical" href="https://cs-renov.fr/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -93,7 +106,7 @@
     <footer class="pt-4 my-md-5 pt-md-5 border-top mx-auto tmdc">
         <div class="row">
           <div class="col col-md-6 col-lg-3">
-            <img class="mb-2" src="images/logo.png" alt="" width="180">
+            <img class="mb-2" src="images/logo.png" alt="Logo du site pour le footer" width="180">
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <h5 id='mt-mb'>Notre agence</h5>
