--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <div class="col-md">
-                            <div class="form-floating">
+                            <div class="form-floating mb-3 mb-lg-0">
                                 <input type="tel" class="form-control" id="tel" placeholder="Numéro de téléphone">
                                 <label for="tel">Numéro de téléphone</label>
                             </div>
@@ -81,6 +81,9 @@
                                 <label for="message">Votre message</label>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-md-12 text-center">
+                        <button type="button submit" class="btn btn-dark text-center w-100 p-3 mb-0 sendbtn">Envoyer</button>
                     </div>
                 </div>
             </div>
