--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="twitter:image" content="images/seo.jpg">
     <link rel="canonical" href="https://cs-renov.fr/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -31,6 +32,27 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+    <div class="modal fade" id="newsletter" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-newsletter">
+          <div class="modal-content">
+            <form>
+              <div class="modal-header" >
+                <h4>- 10% sur notre site</h4>	
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">					
+                <p>En vous abonnant à notre newsletter, vous pouvez obtenir 10% de réduction sur une première commande réalisée chez nous, valable pour toute demande de travaux de maçonnerie générale.</p>
+                <div class="input-group">
+                  <input type="email" class="form-control" placeholder="Votre adresse e-mail" required>
+                  <div class="input-group-append">
+                    <input type="submit" class="btn btn-primary" value="S'abonner">
+                  </div>
+                </div>
+              </div>
+            </form>		
+          </div>
+        </div>
+      </div>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
@@ -44,13 +66,15 @@
             </ul>
         </header>
     </div>
-        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light header">
+    <div class="container-fluid p-0">
+        <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light header">
             <div class="col-md-5 p-lg-5 mx-auto my-5 tophead">
                 <img src="images/logo.png" alt="Logo du site pour la bannière" height="200px">
                 <p class="lead fw-normal">De l'ébauche des plans de votre maison, jusqu'à l'aboutissement de votre chantier, C&S Renov est à vos côtés.</p>
                 <a class="btn btn-outline-secondary" href="#infos">En savoir plus</a>
             </div>
         </div>
+    </div>
         <div class="container col-xxl-8 px-4 py-5" id="infos">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
@@ -90,6 +114,120 @@
                 </div>
               </div>
         </div>
+        <div class="container-fluid bg-light">
+        <section class="section services-section" id="services">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="section-title">
+                            <h2>Nos services</h2>
+                            <p>Nous étudions votre projet et l'analysons dans ses moindres détails, écoutons vos souhaits et nous vous prodiguons des conseils essentiels pour la bonne réalisation et l'aboutissement de celui-ci. Votre satisfaction est notre priorité.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="feature-box-1">
+                            <div class="icon">
+                                <i class="bi bi-house"></i>
+                            </div>
+                            <div class="feature-content">
+                                <h5>Construction d'un bien</h5>
+                                <p>Le maitre d'oeuvre orchestrera la construction de votre bien immobilier, sur devis.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="feature-box-1">
+                            <div class="icon">
+                                <i class="bi bi-bricks"></i>
+                            </div>
+                            <div class="feature-content">
+                                <h5>Maçonnerie générale</h5>
+                                <p>Réalisation tout travaux de maçonnerie générale, agrandissement et extension.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="feature-box-1">
+                            <div class="icon icon2">
+                                <i class="bi bi-paint-bucket"></i>
+                            </div>
+                            <div class="feature-content">
+                                <h5>Ravalement de façade</h5>
+                                <p>Ravalement de façade et isolation par l'extérieur, en toute sécurité.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="feature-box-1">
+                            <div class="icon">
+                                <i class="bi bi-thermometer-half"></i>
+                            </div>
+                            <div class="feature-content">
+                                <h5>Isolation</h5>
+                                <p>Isolation de votre habitat pour de meilleures performances énergétiques.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="feature-box-1">
+                            <div class="icon">
+                                <i class="bi bi-rulers"></i>
+                            </div>
+                            <div class="feature-content">
+                                <h5>Rénovation</h5>
+                                <p>Rénovation et agencement de votre espace de vie, sur devis.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="feature-box-1">
+                            <div class="icon">
+                                <i class="bi bi-door-closed"></i>
+                            </div>
+                            <div class="feature-content">
+                                <h5>Menuiserie</h5>
+                                <p>Remplacement de votre menuiserie, pour plus de confort et une meilleure isolation.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="container py-5">
+        <div class="row">
+            <div class="col float-right mb-5">
+                <div class="text-center">
+                    <h2 class="display-5 fw-bold lh-1 mb-2">Vous parlez de nous</h2>
+                    <p class="lead">Quelques commentaires laissés par nos clients, parce que c'est vous qui parlez de nous le mieux, et vous nous aidez à nous améliorer</p>
+                </div>
+            </div>
+        </div>
+        <div id="commentaires" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="carousel-caption">
+                        <p>Merci à l'entreprise C&S Renov qui ont mené à bien notre projet de construction, la maison idéale pour nous qui a été dessinée puis réalisée avec tout au long du projet un suivi de l'avancée ! </p> <img src="images/profil1.webp">
+                        <div id="image-caption">Matthieu Darche</div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-caption">
+                        <p>J'ai eu un problème de toiture, et heureusement que l'équipe C&S était présente pour ça, ça m'a évité de nombreux dégâts qui auraient coûté cher ! Merci pour votre réactivité.</p> <img src="images/profil2.webp" class="img-fluid">
+                        <div id="image-caption">Amaury Malet</div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-caption">
+                        <p>Un coup de fil et mon affaire était réglée, merci à toute l'équipe. Appelés en urgence pour remplacer une toiture qui faiblissait, je n'ai pas été déçu et c'est avec plaisir que je les recommanderais !</p> <img src="images/profil3.webp" class="img-fluid">
+                        <div id="image-caption">Jordan Vasseur</div>
+                    </div>
+                </div>
+            </div> <a class="carousel-control-prev" data-bs-target="#commentaires" data-bs-slide="prev"> <i class='bi bi-chevron-left'></i> </a> <a class="carousel-control-next" data-bs-target="#commentaires" data-bs-slide="next"> <i class='bi bi-chevron-right'></i> </a>
+        </div>
+    </div>
         <footer class="pt-4 my-md-5 pt-md-5 border-top mx-auto tmdc">
             <div class="row">
               <div class="col col-md-6 col-lg-3">
@@ -153,7 +291,14 @@
         });
 
         $(window).on('load', function() {
-            $('#newsletter').modal('show');
+            var data = sessionStorage.getItem('newsletter');
+            if (data != "ok") {
+                $('#newsletter').modal('show');
+            }
+        });
+
+        $(".btn-close, .modal").click(function(){
+            sessionStorage.setItem('newsletter', 'ok');
         });
     </script>
 </body>
